--- a/basic.html
+++ b/basic.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
+
             margin: 0;
             padding: 20px;
         }
@@ -23,6 +24,6 @@
 </head>
 <body>
     <h1>Welcome to My Simple Web Page</h1>
-    <p>This is a paragraph on my simple web page. HTML is fun!</p>
+    <p>This is a paragraph on my simple web page. HTML is  a fun!</p>
 </body>
 </html>
