--- a/basic.html
+++ b/basic.html
@@ -8,23 +8,66 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
-
             margin: 0;
             padding: 20px;
-            
+            line-height: 1.6;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
         }
         h1 {
             color: #333;
-            text-align: center;
+            margin-top: 0;
+        }
+        h2 {
+            color: #4CAF50;
         }
         p {
             color: #666;
-            text-align: center;
+            text-align: justify;
+        }
+        ul {
+            list-style-type: square;
+            color: #666;
+        }
+        a {
+            color: #4CAF50;
+        }
+        .content {
+            background: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            height: auto;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Simple Web Page</h1>
-    <p>This is a paragraph on my simple web page. HTML is  a fun!</p>
+    <header>
+        <h1>Welcome to My Simple Web Page</h1>
+    </header>
+    <div class="content">
+        <h2>About Me</h2>
+        <p>Hello! I'm a web developer learning to create beautiful and functional websites. I love coding and enjoy solving problems.</p>
+        <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+        <h2>My Interests</h2>
+        <p>Here are some of my interests:</p>
+        <ul>
+            <li>Web Development</li>
+            <li>Machine Learning</li>
+            <li>Photography</li>
+            <li>Traveling</li>
+        </ul>
+        <h2>Contact Me</h2>
+        <p>If you'd like to get in touch, feel free to <a href="mailto:example@example.com">email me</a>.</p>
+    </div>
 </body>
 </html>
